2002-11-04  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.2-cvs-b20

        * Bumped gallery_remote2 protocol version to 2.1.

2002-11-04  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b19

	* Fixed two small bugs in the setup code where we were using 
	  is_executable instead of fs_is_executable (thanks Kwan Skinner)

2002-11-02  Tim Miller <tim_miller@users.sourceforge.net> 1.3.2-cvs-b18

	* Added the "new-album" command to gallery_remote2.php.
	* Removed some incorrect urlencoding.

2002-10-31  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b17

	* Fixed a bug in view_album.php where we were generating admin links
	  with "albumName=xxx" instead of "set_albumName=xxx".  This would
	  cause fatal errors under certain rare circumstances.

2002-10-31  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b16

	* Minor tweak: if the full name is empty, display the username in the
	  "Welcome, xxx" message on albums.php

	* Integrated Jesse Mullan's albumdb refactoring code in a separate
	  branch.  This code separates out the information about each photo
	  from the album metadata which allows us to load much less data into
	  memory when we load an album.  This will speed up cross-album
	  operations and use less memory (yay Jesse!)

2002-10-18  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b14

	* Enhanced the config wizard to behave reasonably when open_basedir is
	  on.  Specifically I improved it so that it doesn't spit out endless
	  warnings by trying to stat files that are not in the open_basedir list.

2002-10-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b13

	* Changed php_flag to php_value in the config wizard code.
	  The PHP website claims that php_flag is legitimate, but some versions
	  of PHP don't support it.  

2002-10-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b12

	* Added .swf (Shockwave) as an acceptable movie format

	* SECURITY: remove tags from the login name and password on the