@@ -1,3 +1,9 @@
+2002-11-05  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b21
+
+	* Further fixed bugs in view_album.php where admin links were not
+	  specifying the album name correctly, which would fail if the album
+	  information were not getting stored in the session properly.
+
 2002-11-04  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.2-cvs-b20
 
         * Bumped gallery_remote2 protocol version to 2.1.
